--- a/Frontend/wallet.html
+++ b/Frontend/wallet.html
@@ -63,34 +63,37 @@
     <main class="container">
         <h1>Wallet 📈</h1>
         <p>Register your investments.</p>
-
-        <div class="form-group">
-            <span>Name</span>
-            <input class="form-field" type="text" placeholder="e.g., Stocks (US)">
-        </div>
-        <br>
-        <div class="form-group">
-            <span>Value</span>
-            <input class="form-field" type="email" placeholder="e.g., 1000.00">
-        </div>
-        <br>
-        <div class="form-group">
-            <span>Goal (%)</span>
-            <input class="form-field" type="email" placeholder="e.g., 50">
-        </div>
-        <br>
-        <div class="form-group">
-            <span>Change</span>
-            <input class="form-field" type="email" placeholder="e.g, USD">
-        </div>
-        <br>
-
-        <button id="register-btn">Register Investment</button>
+        <form id="entryForm">
+            <div class="form-group">
+                <span>Description</span>
+                <input class="form-field" type="text" id="description" placeholder="e.g., Stocks (US)" required>
+            </div>
+            <br>
+            <div class="form-group">
+                <span>Amount</span>
+                <input class="form-field" type="number" id="amount" placeholder="e.g., 1000.00" step="0.01" min="0" required>
+            </div>
+            <br>
+            <div class="form-group">
+                <span>Target (%)</span>
+                <input class="form-field" type="number" id="target" placeholder="e.g., 50" step="1" min="0" max="100" required>
+            </div>
+            <br>
+            <div class="form-group">
+                <span>Currency</span>
+                <input class="form-field" type="text" id="currency" placeholder="e.g, USD" value="BRL" maxlength="3" required>
+            </div>
+            <br>
+            <button type="submit" id="register-btn">Register</button>
+        </form>
+        <div id="message"></div>
 
         <h2>Investment List:</h2>
-        <div id="investment-list">
-        </div>
+        <div id="investment-list"></div>
+
     </main>
-    <script src="script.js"></script>
+
+    <script src="app.js"></script>
+    
 </body>
 </html>
