--- a/Frontend/wallet.html
+++ b/Frontend/wallet.html
@@ -66,22 +66,22 @@
         <form id="entryForm">
             <div class="form-group">
                 <span>Description</span>
-                <input class="form-field" type="text" id="description" placeholder="e.g., Stocks (US)" required>
+                <input class="form-field" type="text" id="description" name="description" placeholder="e.g., Stocks (US)" required>
             </div>
             <br>
             <div class="form-group">
                 <span>Amount</span>
-                <input class="form-field" type="number" id="amount" placeholder="e.g., 1000.00" step="0.01" min="0" required>
+                <input class="form-field" type="number" id="amount" name="amount" placeholder="e.g., 1000.00" step="0.01" min="0" required>
             </div>
             <br>
             <div class="form-group">
                 <span>Target (%)</span>
-                <input class="form-field" type="number" id="target" placeholder="e.g., 50" step="1" min="0" max="100" required>
+                <input class="form-field" type="number" id="target" name="target" placeholder="e.g., 50" step="1" min="0" max="100" required>
             </div>
             <br>
             <div class="form-group">
-                <span>Currency</span>
-                <input class="form-field" type="text" id="currency" placeholder="e.g, USD" value="BRL" maxlength="3" required>
+                <span for="currency">Currency</span>
+                <input class="form-field" type="text" id="currency" name="currency" placeholder="e.g, USD" value="BRL" maxlength="3" required>
             </div>
             <br>
             <button type="submit" id="register-btn">Register</button>
