feat: add entry list display with real-time updates
- Added new GET endpoint '/api/get-entries' to fetch all financial entries ordered by creation date
- Implemented frontend helper functions renderEntries() and fetchEntries() to display entries in UI
- Added entries list section to wallet.html with loading state
- Modified form submission to automatically refresh entry list after successful submission
- Added error handling and empty state messaging for better user experience
- Updated UI to show

--- a/Frontend/wallet.html
+++ b/Frontend/wallet.html
@@ -88,8 +88,10 @@
         </form>
         <div id="message"></div>
 
-        <h2>Investment List:</h2>
-        <div id="investment-list"></div>
+        <hr> <h2>My Financial Entries</h2>
+        <ul id="entryList">
+            <li>Loading entries...</li>
+        </ul>
 
     </main>
 
